--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         The versioning scheme defined here corresponds to SLING-7406 (<module_version>-<htl_specification_version>). Take care when
         releasing to only increase the first part, unless the module provides support for a newer version of the HTL specification.
     -->
-    <version>1.0.53-1.3.1-SNAPSHOT</version>
+    <version>1.0.53-1.4.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling Scripting HTL Engine</name>
@@ -85,7 +85,8 @@
                             io.sightly; version:Version=1.1,
                             io.sightly; version:Version=1.2,
                             io.sightly; version:Version=1.3,
-                            io.sightly; version:Version=1.3.1
+                            io.sightly; version:Version=1.3.1,
+                            io.sightly; version:Version=1.4.0
                         </Provide-Capability>
                         <Require-Capability>
                             io.sightly.compiler; filter:="(&amp;(version&gt;=1.0)(!(version&gt;=2.0)))",
@@ -171,13 +172,13 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.scripting.sightly.compiler</artifactId>
-            <version>1.0.20-1.3.1</version>
+            <version>1.0.21-1.4.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.scripting.sightly.compiler.java</artifactId>
-            <version>1.0.22-1.3.1</version>
+            <version>1.0.23-1.4.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
